compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__invalid_list_pattern_name.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1327
expression: "let assert [theElement] = [9.4]"
snapshot_kind: text
---
----- SOURCE CODE
let assert [theElement] = [9.4]

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:13
  │
1 │ let assert [theElement] = [9.4]
  │             ^^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: the_element
